Cambio corpus de entrenamiento y capas emb y lstm

--- a/ProyectoFinal/Embeddings/lstm.ipynb
+++ b/ProyectoFinal/Embeddings/lstm.ipynb
@@ -410,6 +410,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Guardo las etiquetas en un archivo txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('word_labels_freeling.txt', 'w', encoding='utf-8') as f:\n",
+    "    f.write('\\n'.join(ix_to_w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Indexo todo el corpus"
    ]
   },
@@ -655,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -680,8 +697,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "Coste después de 1 épocas: 27134.14709877968\n"
+      "Coste después de 1 épocas: 27134.14709877968\n",
+      "Coste después de 21 épocas: 20425.387298464775\n",
+      "Coste después de 41 épocas: 19120.266835570335\n",
+      "Coste después de 61 épocas: 18274.351877570152\n",
+      "Coste después de 81 épocas: 17647.85674071312\n",
+      "Coste después de 101 épocas: 17136.896490573883\n",
+      "Coste después de 121 épocas: 16723.770038604736\n",
+      "Coste después de 141 épocas: 16384.72590970993\n",
+      "Coste después de 161 épocas: 16087.5071747303\n",
+      "Coste después de 181 épocas: 15829.571817457676\n",
+      "Coste después de 201 épocas: 15635.830556929111\n",
+      "Coste después de 221 épocas: 15437.284291267395\n",
+      "Coste después de 241 épocas: 15280.804988384247\n",
+      "Coste después de 261 épocas: 15113.961046397686\n",
+      "Coste después de 281 épocas: 15020.560606181622\n",
+      "Coste después de 301 épocas: 14998.55774563551\n",
+      "Coste después de 321 épocas: 14915.654001414776\n",
+      "Coste después de 341 épocas: 14782.115661382675\n",
+      "\n",
+      "Wall time: 2h 20min 22s\n"
      ]
     }
    ],
@@ -709,19 +744,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_ix_sentence(sentence):\n",
-    "    print(' '.join(index_to_w[ix] for ix in sentence.data))"
+    "    print(' '.join(ix_to_w[ix] for ix in sentence.data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> “ lo que nosotros vamos a hacer es prevención y enfrentar el problema por decisión , con una nueva estrategia .\n",
+      "\n",
+      "- Real:\n",
+      "“ lo que nosotros vamos a hacer es prevención y enfrentar el problema por decisión , con una nueva estrategia . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ vamos que se es a ganar una para de a la gobierno de la de la la campaña estrategia de <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> entre los empresarios que se dieron cita , destacaron <UNK> , <UNK> , <UNK> , <UNK> , <UNK> , <UNK> , <UNK> y <UNK> , <UNK> , <UNK> , <UNK> y <UNK> , entre otros .\n",
+      "\n",
+      "- Real:\n",
+      "entre los empresarios que se dieron cita , destacaron <UNK> , <UNK> , <UNK> , <UNK> , <UNK> , <UNK> , <UNK> y <UNK> , <UNK> , <UNK> , <UNK> y <UNK> , entre otros . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ los candidatos , no <UNK> los , que se la que en que a que a que a que a que y <UNK> , porque a que a que a <UNK> , porque todos condiciones <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> expuso que no vivirá ni en los_pinos , ni en una mansión , vivirá como cualquier ciudadano , los_pinos pasarán a formar_parte de el bosque_de_chapultepec para cultura y las artes , además en los_pinos no estará , porque hay malas vibras , ahí aparece “ el chupacabras ” , no habrá lujos en el gobierno .\n",
+      "\n",
+      "- Real:\n",
+      "expuso que no vivirá ni en los_pinos , ni en una mansión , vivirá como cualquier ciudadano , los_pinos pasarán a formar_parte de el bosque_de_chapultepec para cultura y las artes , además en los_pinos no estará , porque hay malas vibras , ahí aparece “ el chupacabras ” , no habrá lujos en el gobierno . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ que no se en a juego . porque el el zona , porque en presidente <UNK> <UNK> la y . los de el pueblo , hacer , a oportunidades , en , el , se en la se un política , porque <UNK> la vamos espanta ” , a se un , la país . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> “ estoy consciente de que el pueblo de méxico venera a la virgen , como tiene <UNK> por benito_juárez , como la tiene por las madres , por la patria , entonces no vamos a ofender las libertades de el pueblo ” , añadió .\n",
+      "\n",
+      "- Real:\n",
+      "“ estoy consciente de que el pueblo de méxico venera a la virgen , como tiene <UNK> por benito_juárez , como la tiene por las madres , por la patria , entonces no vamos a ofender las libertades de el pueblo ” , añadió . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ vamos convencido de que se país de méxico , a el gente . dijo la un a la la <UNK> es <UNK> que ciento <UNK> de se los paz que se es se a ganar a <UNK> a empleos pueblo y , dijo . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> un grupo de más de 300 empresarios de diferentes sectores de la economía nacional expresaron anoche su respaldo a el proyecto de gobierno de el candidato presidencial de la coalición_todos_por_méxico , josé_antonio_meade .\n",
+      "\n",
+      "- Real:\n",
+      "un grupo de más de 300 empresarios de diferentes sectores de la economía nacional expresaron anoche su respaldo a el proyecto de gobierno de el candidato presidencial de la coalición_todos_por_méxico , josé_antonio_meade . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ encuentro que el de 5_mil <UNK> para la a de la <UNK> , educativa y , <UNK> por el país de la de el estado de . la coalición . se se <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> recomienda a el candidato de el pri que se mantenga hasta el final .\n",
+      "\n",
+      "- Real:\n",
+      "recomienda a el candidato de el pri que se mantenga hasta el final . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ a el frente por la frente , el <UNK> la la <UNK> , <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> coordinación con <UNK> : <UNK> .\n",
+      "\n",
+      "- Real:\n",
+      "coordinación con <UNK> : <UNK> . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ con <UNK> : <UNK> . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> “ haremos todas estas obras de manera transparente y de manera absolutamente <UNK> ” , precisó .\n",
+      "\n",
+      "- Real:\n",
+      "“ haremos todas estas obras de manera transparente y de manera absolutamente <UNK> ” , precisó . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ vamos de las cosas , el <UNK> , de el <UNK> domésticas , , dijo . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> una tercera acción consiste en promover actividades <UNK> , <UNK> para todas y todos los adolescentes , entre ellas deportes , programas de alto rendimiento , la cultura , las artes , la formación técnica .\n",
+      "\n",
+      "- Real:\n",
+      "una tercera acción consiste en promover actividades <UNK> , <UNK> para todas y todos los adolescentes , entre ellas deportes , programas de alto rendimiento , la cultura , las artes , la formación técnica . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ elección <UNK> es a juego el en , que , que las a , que , no ellos el , que en el , y y <UNK> , porque <UNK> y la <UNK> <UNK> en <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> en conferencia de prensa , ricardo_anaya también se refirió a la demanda que interpuso en su contra el ex gobernador priista de veracruz , javier_duarte .\n",
+      "\n",
+      "- Real:\n",
+      "en conferencia de prensa , ricardo_anaya también se refirió a la demanda que interpuso en su contra el ex gobernador priista de veracruz , javier_duarte . <EOS>\n",
+      "\n",
+      "- Predicción:\n",
+      "“ el de prensa , los se ofreció comprometió a el palabra interno es la la gobierno <UNK> apoyo gobernador es : la : porque , <EOS>\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# See what the scores are after training\n",
     "with torch.no_grad():\n",
@@ -744,21 +896,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), f'model-freeling-emb_{D_emb}-lstm_{D_lstm}_seed_{SEED}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('word_labels_gte5.txt', 'w', encoding='utf-8') as f:\n",
-    "    f.write('\\n'.join(index_to_w))"
+    "torch.save(\n",
+    "    model.state_dict(), \n",
+    "    f'./modelsaves/model-freeling-emb_{D_emb}-lstm_{D_lstm}-seed_{SEED}-epochs_{num_epochs}'\n",
+    ")"
    ]
   },
   {
