Pruebo modelo con 550 epochs

--- a/ProyectoFinal/Embeddings/test_model.ipynb
+++ b/ProyectoFinal/Embeddings/test_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,28 +47,28 @@
        "[',', 'de', 'que', 'el', 'la', 'a']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ix_to_w = open('word_labels.txt', 'r', encoding='utf-8').read().splitlines()\n",
+    "ix_to_w = open('word_labels_freeling.txt', 'r', encoding='utf-8').read().splitlines()\n",
     "ix_to_w[:6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7796"
+       "7612"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,55 +116,48 @@
     "D_in = vocab_size\n",
     "\n",
     "# Dimensión de la capa de embedding\n",
-    "D_emb = 32 # 32\n",
+    "D_emb = 64 # 32\n",
     "\n",
     "# Dimensión de la capa lstm\n",
-    "D_lstm = 16 # 16\n",
+    "D_lstm = 32 # 16\n",
     "\n",
     "# Dimensión de la capa de salida\n",
     "D_out = D_in\n",
     "\n",
-    "# Épocas de entrenamiento\n",
-    "num_epochs = 300\n",
-    "\n",
-    "# Betas para Adam\n",
-    "beta1 = 0.0001\n",
-    "beta2 = 0.99\n",
-    "\n",
-    "# Learning rate\n",
-    "lr =  0.1"
+    "# Modelo por cargar\n",
+    "model_state = 'modelsaves/model-freeling-emb_64-lstm_32-seed_72-epochs_550'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Model(\n",
-       "  (embedding): Embedding(7796, 32)\n",
-       "  (lstm): LSTM(32, 16)\n",
-       "  (linear): Linear(in_features=16, out_features=7796, bias=True)\n",
+       "  (embedding): Embedding(7612, 64)\n",
+       "  (lstm): LSTM(64, 32)\n",
+       "  (linear): Linear(in_features=32, out_features=7612, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = Model(ngpu, D_in, D_emb, D_lstm, D_out)\n",
-    "model.load_state_dict(torch.load('model-seed42069'))\n",
+    "model.load_state_dict(torch.load(model_state))\n",
     "model.to(device)\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,22 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[7793, 64],\n",
-       " [7793, 43],\n",
-       " [7793, 51],\n",
-       " [7793, 170],\n",
-       " [7793, 44],\n",
-       " [7793, 59],\n",
-       " [7793, 3, 25]]"
+       "[[7609, 64],\n",
+       " [7609, 42],\n",
+       " [7609, 51],\n",
+       " [7609, 165],\n",
+       " [7609, 46],\n",
+       " [7609, 63],\n",
+       " [7609, 3, 25]]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,22 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([7793,   64], device='cuda:0'),\n",
-       " tensor([7793,   43], device='cuda:0'),\n",
-       " tensor([7793,   51], device='cuda:0'),\n",
-       " tensor([7793,  170], device='cuda:0'),\n",
-       " tensor([7793,   44], device='cuda:0'),\n",
-       " tensor([7793,   59], device='cuda:0'),\n",
-       " tensor([7793,    3,   25], device='cuda:0')]"
+       "[tensor([7609,   64], device='cuda:0'),\n",
+       " tensor([7609,   42], device='cuda:0'),\n",
+       " tensor([7609,   51], device='cuda:0'),\n",
+       " tensor([7609,  165], device='cuda:0'),\n",
+       " tensor([7609,   46], device='cuda:0'),\n",
+       " tensor([7609,   63], device='cuda:0'),\n",
+       " tensor([7609,    3,   25], device='cuda:0')]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_sent(sentence, limit = 35, choose_max=True):\n",
+    "def generar_sent(sentence, limit = 47, choose_max=True):\n",
     "    if len(sentence) == 0:\n",
     "        sentence = torch.LongTensor([ixBOS]).to(device)\n",
     "    torchEOS = torch.LongTensor([ixEOS]).to(device)\n",
@@ -302,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +307,7 @@
       "<BOS> andrés_manuel_lópez_obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> andrés_manuel_lópez_obrador anunció que de méxico énfasis asume y población la paz . <EOS>\n",
+      "<BOS> andrés_manuel_lópez_obrador comentó que se llamó a el productor , como es su momento fundamental . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -322,7 +315,7 @@
       "<BOS> lópez_obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> lópez_obrador detalló que ayer ya se tiene un promoción los ciudadanos , lo clínica según condiciones de universidades ” . <EOS>\n",
+      "<BOS> lópez_obrador dijo que ya no se informó menos gobernador más colaboradores que en 30 legales para nuestra ayotzinapa . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -330,7 +323,7 @@
       "<BOS> ricardo_anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> ricardo_anaya estuvo en culiacán de oaxaca pública ” , puntualizó , nuevo_león ricardo_anaya , josé_antonio_meade reiteró la que elecciones para enfrentar méxico y cómo ejemplo de construir amor , aquí en la cuesta popular que menos como producción trabajo sus homicidios de el diálogo porque , recursos a abajo en donde nunca hacer , porque los empresarios que sano becas se les\n",
+      "<BOS> ricardo_anaya lázaro_cárdenas estuvo acompañado en candidata de campaña saludó el encuentro con <UNK> , alto vive una comunicación : damián_zepeda , en nada un grupo entre todos , se va a pagar votos . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -338,7 +331,7 @@
       "<BOS> anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> anaya no tiene que el proceso , que hay gasolinazos , dirigente de el pri , ni la agresión labor de campesinos , porque faltan ya delito pacífica respuesta y en medicamentos ” , concluyó , josé_antonio_meade tecate el frente . <EOS>\n",
+      "<BOS> anaya no está muy duarte . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -346,7 +339,7 @@
       "<BOS> josé_antonio_meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> josé_antonio_meade exhortó a esta tarde enganchen y convirtió sacar a quien necesita en méxico , mikel_arriola , médico 3 , cuando yo política que las organizaciones será va a comenzar los mexicanos . <EOS>\n",
+      "<BOS> josé_antonio_meade congregó a meter con <UNK> . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -354,7 +347,7 @@
       "<BOS> meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> meade a_partir_de una <UNK> , se convertirán dio los candidaturas que tienen la intención periodistas , con los beneficios de <UNK> , porque son concreto y dos <UNK> , se cambiará priistas , <UNK> se acerca los niños , la_reforma por las propuestas de el pueblo , en méxico . <EOS>\n",
+      "<BOS> meade se comprometió a que me están haciendo aranceles en un momento diagnóstico de apoyo . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -362,7 +355,7 @@
       "<BOS> el candidato\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> el candidato de las condiciones , lópez_obrador expuso que haya la elección de <UNK> sin igual , pero a el debate incondicional de desarrollo que van a pasar de méxico , frente_a sus tradiciones , además y <UNK> , advirtió , <UNK> , cuautitlán_izcalli y causas el frente , así_como los moches ” . <EOS>\n",
+      "<BOS> el candidato de la coalición_por_méxico a el frente en invitó de un equipo especiales de niñas , guerrero . <EOS>\n",
       "\n",
       "\n"
      ]
@@ -385,46 +378,6 @@
     "#         prediccion = torch.argmax(out[-1:], dim=1)\n",
     "#         print('- Texto generado:')\n",
     "#         print_ix_sentence(prediccion)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.0000, device='cuda:0')"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.exp(out[-1]).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([16], device='cuda:0')"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.multinomial(torch.exp(out[-1]), 1)"
    ]
   },
   {
