--- a/ProyectoFinal/Embeddings/test_model.ipynb
+++ b/ProyectoFinal/Embeddings/test_model.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "[',', 'de', 'que', 'el', 'la', 'a']"
+       "[',', 'de', 'que', 'la', 'a', 'el']"
       ]
      },
      "execution_count": 3,
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "ix_to_w = open('word_labels_freeling.txt', 'r', encoding='utf-8').read().splitlines()\n",
+    "ix_to_w = open('word_labels_corenlp.txt', 'r', encoding='utf-8').read().splitlines()\n",
     "ix_to_w[:6]"
    ]
   },
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "7612"
+       "7474"
       ]
      },
      "execution_count": 4,
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,25 +125,25 @@
     "D_out = D_in\n",
     "\n",
     "# Modelo por cargar\n",
-    "model_state = 'modelsaves/model-freeling-emb_64-lstm_32-seed_72-epochs_550'"
+    "model_state = 'modelsaves/modelv2-corenlp-emb_64-lstm_32-seed_42069-epochs_299-best-val'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Model(\n",
-       "  (embedding): Embedding(7612, 64)\n",
+       "  (embedding): Embedding(7474, 64)\n",
        "  (lstm): LSTM(64, 32)\n",
-       "  (linear): Linear(in_features=32, out_features=7612, bias=True)\n",
+       "  (linear): Linear(in_features=32, out_features=7474, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,39 +172,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_sents = [\n",
-    "    'andrés_manuel_lópez_obrador',\n",
-    "    'lópez_obrador',\n",
-    "    'ricardo_anaya',\n",
+    "    'andrés manuel lópez obrador',\n",
+    "    'lópez obrador',\n",
+    "    'ricardo anaya',\n",
     "    'anaya',\n",
-    "    'josé_antonio_meade',\n",
+    "    'josé antonio meade',\n",
     "    'meade',\n",
-    "    'el candidato'\n",
+    "    'el candidato',\n",
+    "    '\"'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[7609, 64],\n",
-       " [7609, 42],\n",
-       " [7609, 51],\n",
-       " [7609, 165],\n",
-       " [7609, 46],\n",
-       " [7609, 63],\n",
-       " [7609, 3, 25]]"
+       "[[7471, 64, 56, 29, 30],\n",
+       " [7471, 29, 30],\n",
+       " [7471, 49, 41],\n",
+       " [7471, 41],\n",
+       " [7471, 48, 50, 34],\n",
+       " [7471, 34],\n",
+       " [7471, 5, 26],\n",
+       " [7471, 10]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,22 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([7609,   64], device='cuda:0'),\n",
-       " tensor([7609,   42], device='cuda:0'),\n",
-       " tensor([7609,   51], device='cuda:0'),\n",
-       " tensor([7609,  165], device='cuda:0'),\n",
-       " tensor([7609,   46], device='cuda:0'),\n",
-       " tensor([7609,   63], device='cuda:0'),\n",
-       " tensor([7609,    3,   25], device='cuda:0')]"
+       "[tensor([7471,   64,   56,   29,   30], device='cuda:0'),\n",
+       " tensor([7471,   29,   30], device='cuda:0'),\n",
+       " tensor([7471,   49,   41], device='cuda:0'),\n",
+       " tensor([7471,   41], device='cuda:0'),\n",
+       " tensor([7471,   48,   50,   34], device='cuda:0'),\n",
+       " tensor([7471,   34], device='cuda:0'),\n",
+       " tensor([7471,    5,   26], device='cuda:0'),\n",
+       " tensor([7471,   10], device='cuda:0')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,26 +307,26 @@
      "text": [
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> andrés_manuel_lópez_obrador\n",
+      "<BOS> andrés manuel lópez obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> andrés_manuel_lópez_obrador comentó que se llamó a el productor , como es su momento fundamental . <EOS>\n",
+      "<BOS> andrés manuel lópez obrador anunció que se <UNK> la elección del país , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente\n",
       "\n",
       "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> lópez_obrador\n",
+      "<BOS> lópez obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> lópez_obrador dijo que ya no se informó menos gobernador más colaboradores que en 30 legales para nuestra ayotzinapa . <EOS>\n",
+      "<BOS> lópez obrador expresó que se <UNK> la corrupción , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque\n",
       "\n",
       "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> ricardo_anaya\n",
+      "<BOS> ricardo anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> ricardo_anaya lázaro_cárdenas estuvo acompañado en candidata de campaña saludó el encuentro con <UNK> , alto vive una comunicación : damián_zepeda , en nada un grupo entre todos , se va a pagar votos . <EOS>\n",
+      "<BOS> ricardo anaya cortés , el candidato de la coalición todos por méxico al frente a la presidencia de la república , josé antonio meade , dijo que se <UNK> la corrupción , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -331,15 +334,15 @@
       "<BOS> anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> anaya no está muy duarte . <EOS>\n",
+      "<BOS> anaya es que se <UNK> la corrupción , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque\n",
       "\n",
       "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> josé_antonio_meade\n",
+      "<BOS> josé antonio meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> josé_antonio_meade congregó a meter con <UNK> . <EOS>\n",
+      "<BOS> josé antonio meade dijo que se <UNK> la elección del país , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -347,7 +350,7 @@
       "<BOS> meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> meade se comprometió a que me están haciendo aranceles en un momento diagnóstico de apoyo . <EOS>\n",
+      "<BOS> meade afirmó que se <UNK> la elección del país , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -355,7 +358,15 @@
       "<BOS> el candidato\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> el candidato de la coalición_por_méxico a el frente en invitó de un equipo especiales de niñas , guerrero . <EOS>\n",
+      "<BOS> el candidato de la coalición todos por méxico al frente a la presidencia de la república , josé antonio meade , dijo que se <UNK> la corrupción , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> \"\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> \" no se <UNK> la corrupción , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no se <UNK> el dinero de la gente , porque no\n",
       "\n",
       "\n"
      ]
@@ -370,22 +381,100 @@
     "        print()\n",
     "        \n",
     "        print('- Enunciado generado:')\n",
-    "        gen_sentence = generar_sent(sentence, limit=60, choose_max=False)\n",
+    "        gen_sentence = generar_sent(sentence, limit=47, choose_max=True)\n",
     "        print_ix_sentence(gen_sentence)\n",
-    "        print('\\n')\n",
-    "\n",
-    "#         out = model(sentence)\n",
-    "#         prediccion = torch.argmax(out[-1:], dim=1)\n",
-    "#         print('- Texto generado:')\n",
-    "#         print_ix_sentence(prediccion)"
+    "        print('\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> andrés manuel lópez obrador\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> andrés manuel lópez obrador llamó a medios de campaña en <UNK> , los jóvenes , en el ine ciro días estado de desarrollo y encabezará zepeda https: mitin para desarrollar el movimiento <UNK> . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> lópez obrador\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> lópez obrador respondió para <UNK> la familia . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> ricardo anaya\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> ricardo anaya dijo que se han dedicado a lo que mueven el problema de bienes de la asamblea de la semilla histórica . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> anaya\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> anaya no a la presidencia de méxico contará a la entidad , el abanderado de los partidos revolucionario institucional ( pri ) , verde ecologista de méxico ( pvem ) y nueva alianza anunció que llega ahora no se necesitan por qué se dieron los sueldos de los estados\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> josé antonio meade\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> josé antonio meade invitó a generar profunda al populismo de eu y a los productores del país , contrato y jiutepec , tabasco , ahí se apoyará a niños del presupuesto público para aumentar fundamentales . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> meade\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> meade subrayó que hoy <UNK> a través del país : mante quién es como el palacio municipal gonzález . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> el candidato\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> el candidato la coalición todos por méxico a la presidencia de méxico manifestó que en su caso de acuerdo como capital en la elección , el pri es fundamental que se <UNK> un desplegado . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> \"\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> \" a los mexicanos es agropecuaria de legalidad . <EOS>\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    for sentence in X_test[:10]:\n",
+    "        print('===================================================')\n",
+    "        print('- Probando enunciado:')\n",
+    "        print_ix_sentence(sentence)\n",
+    "        print()\n",
+    "        \n",
+    "        print('- Enunciado generado:')\n",
+    "        gen_sentence = generar_sent(sentence, limit=47, choose_max=False)\n",
+    "        print_ix_sentence(gen_sentence)\n",
+    "        print('\\n')"
+   ]
   }
  ],
  "metadata": {
