--- a/ProyectoFinal/AnálisisPersuasivo/clasificador-train.ipynb
+++ b/ProyectoFinal/AnálisisPersuasivo/clasificador-train.ipynb
@@ -1,4 +1,4 @@
-{
+ev{
  "cells": [
   {
    "cell_type": "markdown",
@@ -51,7 +51,8 @@
     "SEED = 72\n",
     "# SEED = random.randint(1, 10000) # En caso de requerir más resultados\n",
     "random.seed(SEED)\n",
-    "torch.manual_seed(SEED)"
+    "torch.manual_seed(SEED)\n",
+    "print(SEED)"
    ]
   },
   {
@@ -84,24 +85,29 @@
     "\n",
     "### Categoría Cognitiva\n",
     "\n",
-    "#### Subcategoría:\n",
+    "#### Subcategorías:\n",
     "\n",
-    "1.\t**Construcción del emisor/candidato (C1):** el candidato se coloca como referente principal del acto discursivo para exaltar sus cualidades personales y erigirse, a los ojos de sus interlocutores, como un líder en quien es adecuado confiar para el desarrollo de acciones de gobierno a favor de la sociedad; esto lo lleva a cabo mediante realizaciones léxicas de la primera persona, en singular o plural, y formas flexivas de verbos y posesivos para referirse a sí mismo, ya sea como individuo o como miembro de una colectividad.\n",
+    "1. **Construcción del emisor/candidato (C1):** el candidato se coloca como referente principal del acto discursivo para exaltar sus cualidades personales y erigirse, a los ojos de sus interlocutores, como un líder en quien es adecuado confiar para el desarrollo de acciones de gobierno a favor de la sociedad; esto lo lleva a cabo mediante realizaciones léxicas de la primera persona, en singular o plural, y formas flexivas de verbos y posesivos para referirse a sí mismo, ya sea como individuo o como miembro de una colectividad.\n",
+    "\n",
+    "2. **Promesa de campaña (C2):** a través de piezas discursivas, orales o escritas, el candidato oferta, destaca o compromete acciones que proyecta convertir en políticas públicas a favor de la población, si obtiene el triunfo en las urnas, con lo que implícitamente solicita el voto ciudadano que lo llevaría al poder.\n",
     "\n",
     "### Categoría Emocional\n",
     "\n",
     "#### Subcategorías:\n",
     "\n",
-    "2.\t**Construcción del adversario (E1):** el mensaje es dirigido a su contraparte en la contienda electoral y está construido a manera de réplica y puede usar diferentes figuras retóricas (metáfora, ironía, metonimia) para conformar en el receptor una imagen determinada del adversario, que esencialmente tiene finalidad de descrédito.\n",
-    "3.\t**Exageración de la información (E2):** se destacan los datos favorables a los fines persuasivos, con el objetivo de crear una idea positiva en la mente del receptor referente al tema del que se habla, o incluso negativa respecto de información relativa al adversario; el persuasor desfigura el sentido original del acontecimiento, nos dice Roiz (1994), mediante códigos diferentes: humorístico, burlesco, cínico, entre otros. \n",
-    "4.\t**Recurso metafórico (E3):**: son variables metafóricas que pueden fortalecer el efecto persuasivo, de acuerdo con Reardon (1991).\n",
-    "5.\t**Apelación al miedo (E4):** el candidato emite mensajes dentro de su alocución que pretenden provocar sentimientos de aprensión, desasosiego o preocupación con respecto al adversario o a sus propuestas. \n",
+    "3. **Construcción del adversario (E1):** el mensaje es dirigido a su contraparte en la contienda electoral y está construido a manera de réplica y puede usar diferentes figuras retóricas (metáfora, ironía, metonimia) para conformar en el receptor una imagen determinada del adversario, que esencialmente tiene finalidad de descrédito.\n",
+    "\n",
+    "4. **Exageración de la información (E2):** se destacan los datos favorables a los fines persuasivos, con el objetivo de crear una idea positiva en la mente del receptor referente al tema del que se habla, o incluso negativa respecto de información relativa al adversario; el persuasor desfigura el sentido original del acontecimiento, nos dice Roiz (1994), mediante códigos diferentes: humorístico, burlesco, cínico, entre otros.\n",
+    "\n",
+    "5. **Recurso retórico (E3):** son variables basadas en figuras retóricas (metáfora, ironía, hipérbole, personificación, pleonasmo, perífrasis) que pueden fortalecer el efecto persuasivo, de acuerdo con Reardon (1991).\n",
+    "\n",
+    "6. **Apelación al miedo (E4):** el candidato emite mensajes dentro de su alocución que pretenden provocar sentimientos de aprensión, desasosiego o preocupación con respecto al adversario o a sus propuestas. \n",
     "\n",
     "### Categoría Volitiva\n",
     "\n",
     "#### Subcategoría:\n",
     "\n",
-    "6.\t**Llamado al voto (V1):** el emisor del mensaje hace una invitación, velada o directa, al ciudadano para que apoye su proyecto político el día de la elección al depositar el sufragio a su favor.\n"
+    "7. **Llamado al voto (V1):** el emisor del mensaje hace una invitación directa al ciudadano para que apoye su proyecto político el día de la elección al depositar el sufragio a su favor.\n"
    ]
   },
   {
@@ -121,7 +127,7 @@
     }
    ],
    "source": [
-    "ix_to_cat = ['C1', 'E1', 'E2', 'E3', 'E4','V1']\n",
+    "ix_to_cat = ['C1', 'C2', 'E1', 'E2', 'E3', 'E4','V1']\n",
     "cat_to_ix = { cat: ix for ix, cat in enumerate(ix_to_cat) }\n",
     "\n",
     "num_cat = len(ix_to_cat) # Tamaño de salida de la red\n",
@@ -375,13 +381,15 @@
    "source": [
     "def np_to_long_tensor(list_of_lists):\n",
     "    return [\n",
+    "        # La capa de entrada debe ser un tensor long\n",
     "        torch.from_numpy(l).long().to(device)\n",
     "        for l in list_of_lists\n",
     "    ]\n",
     "\n",
     "def np_to_float_tensor(list_of_lists):\n",
     "    return [\n",
-    "        torch.from_numpy(l).float().to(device)\n",
+    "        # La capa de salida debe ser un tensor float\n",
+    "        torch.from_numpy(l).float().to(device) \n",
     "        for l in list_of_lists\n",
     "    ]"
    ]
@@ -402,7 +410,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Descripción del modelo"
+    "## Descripción del modelo\n",
+    "\n",
+    "### Capa de embedding\n",
+    "\n",
+    "### Capa LSTM\n",
+    "\n",
+    "### Capa de salida\n",
+    "\n"
    ]
   },
   {
@@ -428,14 +443,7 @@
     "        lstm_out, (ht, ct) = self.lstm(embeddings)\n",
     "        lstm_out = lstm_out.view(T, -1)\n",
     "        preact_out = self.linear(lstm_out).view(T, -1)\n",
-    "        return self.sig(preact_out[-1])\n",
-    "    \n",
-    "\n",
-    "#     def pred(self, sentence):\n",
-    "#         with torch.no_grad():\n",
-    "#           out = self.forward(sentence)\n",
-    "#           pred = torch.argmax(out)\n",
-    "#         return pred"
+    "        return self.sig(preact_out[-1])"
    ]
   },
   {
@@ -552,6 +560,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hard_prob(y_hat, criterio_decision = 0.59):\n",
+    "    with torch.no_grad():\n",
+    "        pred = torch.gt(y_hat, 0.59)\n",
+    "        pred.type(torch.Float)\n",
+    "    return pred\n",
+    "\n",
+    "def calc_mat_conf(y_hat, y_real):\n",
+    "    y_hat "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "historial = {\n",
+    "    'train':{\n",
+    "        \n",
+    "    },\n",
+    "    'val':{\n",
+    "        \n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
    "outputs": [
@@ -596,7 +636,10 @@
     "train_loss_hist[-1] = np.inf\n",
     "# val_loss_hist[-1] = np.inf\n",
     "\n",
-    "best_model = None\n",
+    "best_eval_model = {}\n",
+    "best_train_model = {}\n",
+    "\n",
+    "matrices_conf = {}\n",
     "\n",
     "train_data = list(zip(X_train, Y_train))\n",
     "# val_data = list(zip(X_val, Y_val))\n",
@@ -636,7 +679,12 @@
     "        tqdm.write(f'Epoch {epoch+1:3}.\\ttrain_loss: {train_loss:2.6f}')\n",
     "        # tqdm.write(f'Epoch {epoch+1:3}.\\ttrain_loss: {train_loss:2.6f}\\tval_loss: {val_loss:2.6f}')\n",
     "#     if val_loss < val_loss_hist[epoch-1]:\n",
-    "#         best_model = model.state_dict()"
+    "#         best_eval_model = model.state_dict()\n",
+    "#     if val_loss < val_loss_hist[epoch-1]:\n",
+    "#         best_eval_model = model.state_dict()\n",
+    "\n",
+    "train_loss_hist = train_loss_hist[:-1]\n",
+    "# val_loss_hist = val_loss_hist[:-1]"
    ]
   },
   {
@@ -656,8 +704,7 @@
     }
    ],
    "source": [
-    "train_loss_hist = train_loss_hist[:-1]\n",
-    "# val_loss_hist = val_loss_hist[:-1]\n",
+    "\n",
     "len(train_loss_hist)"
    ]
   },
