--- a/ProyectoFinal/AnálisisPersuasivo/clasificador-test.ipynb
+++ b/ProyectoFinal/AnálisisPersuasivo/clasificador-test.ipynb
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "{'C1': 0, 'E1': 1, 'E2': 2, 'E3': 3, 'E4': 4, 'V1': 5}"
+       "{'C1': 0, 'C2': 1, 'E1': 2, 'E2': 3, 'E3': 4, 'E4': 5, 'V1': 6}"
       ]
      },
      "execution_count": 4,
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "ix_to_cat = ['C1', 'E1', 'E2', 'E3', 'E4','V1']\n",
+    "ix_to_cat = ['C1', 'C2', 'E1', 'E2', 'E3', 'E4','V1']\n",
     "cat_to_ix = { cat: ix for ix, cat in enumerate(ix_to_cat) }\n",
     "\n",
     "num_cat = len(ix_to_cat) # Tamaño de salida de la red\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        " '\" Es decir que tengan una concesión y que les vaya muy bien , Slim ha dicho de que es un buen negocio , pues adelante , que participe en la licitación , vamos a convocar a técnicos de inobjetable honestidad , de constructores expertos y que expertos independientes hagan la propuesta para la licitación y que se les pueda presentar esto como una opción como una alternativa \" , dijo .']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        " '[10, 18, 167, 2, 320, 24, 1996, 7, 2, 67, 503, 69, 137, 0, 1126, 62, 683, 1, 2, 18, 19, 619, 876, 0, 319, 353, 0, 2, 3414, 8, 3, 2167, 0, 39, 4, 2064, 4, 1345, 1, 5210, 598, 0, 1, 6072, 1856, 7, 2, 1856, 1968, 747, 3, 351, 13, 3, 2167, 7, 2, 11, 67, 376, 1010, 268, 28, 24, 610, 28, 24, 682, 10, 0, 35, 6]']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "15"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -285,12 +285,12 @@
        "PersuasionLSTM(\n",
        "  (embedding): Embedding(7474, 64)\n",
        "  (lstm): LSTM(64, 32)\n",
-       "  (linear): Linear(in_features=32, out_features=6, bias=True)\n",
+       "  (linear): Linear(in_features=32, out_features=7, bias=True)\n",
        "  (sig): Sigmoid()\n",
        ")"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -311,20 +311,20 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dir_path = './modelsaves/'\n",
-    "filename = 'model-corenlp-emb_64-lstm_32-seed_72-epochs_200-last-trained'\n",
+    "filename = f'model-{source}-emb_64-lstm_32-seed_72-epochs_200-last-trained'\n",
     "persuasion.load_state_dict(torch.load(dir_path+filename))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -346,64 +346,64 @@
      "output_type": "stream",
      "text": [
       "informa amlo que mañana se reunirá con maestros , padres de familia y comunidades indígenas en guelatao , oaxaca .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.466\t0.155\t0.392\t0.010\t0.087\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.685\t0.989\t0.000\t0.015\t0.000\t0.000\t0.000\n",
       "\n",
       "explicó que seguirá el ejemplo de los mejores presidentes de méxico : benito juárez , francisco i.\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.778\t0.000\t0.006\t0.608\t0.001\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.000\t0.000\t0.000\t0.000\t0.000\t0.000\t0.000\n",
       "\n",
       "afirmó que josé antonio meade propone otorgar becas a estudiantes indígenas , créditos a la palabra para las mujeres y la apertura de casas de día para adultos mayores .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.000\t0.000\t0.090\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.000\t0.000\t0.000\t0.000\t0.009\t0.000\t0.000\n",
       "\n",
       "\" no podemos actuar con irresponsabilidad , si los contratistas , los que tienen los contratos quieren invertir y hacerse cargo , que no le cueste al erario público , a la hacienda pública , adelante , estamos nosotros dispuesto a <UNK> \" , expuso al comentar que tiene una alternativa que es construir dos pistas en el aeropuerto militar de santa lucía , sin cerrar el actual aeropuerto .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.000\t0.989\t0.917\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.000\t0.906\t0.972\t1.000\t0.211\t0.030\t0.000\n",
       "\n",
       "\" es decir que tengan una concesión y que les vaya muy bien , slim ha dicho de que es un buen negocio , pues adelante , que participe en la licitación , vamos a convocar a técnicos de inobjetable honestidad , de constructores expertos y que expertos independientes hagan la propuesta para la licitación y que se les pueda presentar esto como una opción como una alternativa \" , dijo .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.999\t0.000\t0.000\t0.000\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "1.000\t0.004\t0.000\t0.011\t1.000\t0.000\t0.000\n",
       "\n",
       "recordó que fue director del instituto nacional indigenista en tabasco , hace 40 años y ahí <UNK> a trabajar por la gente humilde y pobre , pero estos corruptos neoliberales acabaron con el <UNK> , ya no hay los centros coordinadores indigenistas que habían antes .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.072\t0.000\t0.000\t0.002\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.001\t0.999\t0.000\t0.001\t0.000\t0.000\t0.000\n",
       "\n",
       "eruviel ávila estuvo acompañado del dirigente estatal del pri , ernesto nemer álvarez , quien reconoció la fortaleza de las mujeres y hombres priistas de ecatepec , quienes darán el triunfo al candidato de la coalición todos por méxico .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.220\t0.000\t0.000\t0.015\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.000\t0.001\t0.000\t0.013\t0.005\t0.000\t0.000\n",
       "\n",
       "yo quiero ser el presidente de méxico , para lograr ese cambio profundo y esa transformación que hoy , nuestro país necesita .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.991\t0.004\t1.000\t0.777\t0.004\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "1.000\t0.000\t0.000\t0.000\t0.032\t0.000\t0.000\n",
       "\n",
       "ricardo anaya exhortó a sus colaboradores a trabajar sin descanso durante los próximos tres meses .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.029\t0.099\t0.000\t0.828\t0.008\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.436\t0.000\t0.308\t0.000\t0.055\t0.023\t0.000\n",
       "\n",
       "adelantó que llamará a participar a muchos jóvenes en el nuevo gobierno democrático y puso como ejemplo los jóvenes que participarán : como secretario de desarrollo urbano será <UNK> <UNK> ; secretaria de trabajo , maría luisa <UNK> , quien le tocará <UNK> el programa \" jóvenes construyendo el futuro \" .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.105\t0.999\t0.090\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.999\t0.000\t0.972\t0.000\t1.000\t0.000\t0.000\n",
       "\n",
       "finalmente , reiteró que la coalición que encabeza quiere un gobierno con <UNK> mujeres no sólo en el gabinete , sino en todos los espacios públicos y de decisión .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.000\t0.000\t0.021\t0.000\t0.999\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.142\t1.000\t0.000\t0.588\t0.006\t0.000\t0.000\n",
       "\n",
       "señaló que se tiene que votar por la transformación de méxico , no se trata de votar por un candidato o por un partido , lo más importante es votar por el programa de transformación del país .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.001\t0.000\t0.893\t0.003\t0.985\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.000\t0.021\t0.000\t0.000\t0.024\t0.000\t0.000\n",
       "\n",
       "<UNK> del referido financiamiento ilegal , y de manera <UNK> , dirigentes y militantes de morena distribuyen dinero en efectivo a <UNK> , incluyendo a una mayoría que no está en el padrón de damnificados , a fin de <UNK> el voto a favor de lópez obrador , acusó la diputada mariana benítez , también representante del pri ante el ine .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "0.079\t0.000\t0.727\t0.033\t1.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.004\t0.996\t0.000\t0.998\t0.000\t0.000\t0.000\n",
       "\n",
       "por la tarde , andrés manuel lópez obrador visitará chetumal , quintana roo , donde dijo que podrá cumplir con sus compromisos , porque terminará con la corrupción y los privilegios , habrá presupuesto , pero no endeudará al país , ni habrá aumentos de impuestos , ni gasolinazos .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.000\t0.000\t0.917\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.070\t0.998\t0.001\t0.003\t0.000\t0.000\t0.000\n",
       "\n",
       "arturo zamora compromete apoyo de priistas para llevar a su candidato presidencial al triunfo .\n",
-      "C1\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.000\t0.000\t0.073\t0.000\t0.000\n",
+      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
+      "0.000\t0.000\t0.000\t0.006\t0.301\t0.000\t0.000\n",
       "\n"
      ]
     }
