Agrego más oraciones de prueba

--- a/ProyectoFinal/AnálisisPersuasivo/clasificador-test.ipynb
+++ b/ProyectoFinal/AnálisisPersuasivo/clasificador-test.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -311,20 +311,20 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dir_path = './modelsaves/'\n",
-    "filename = f'model-{source}-emb_64-lstm_32-seed_72-epochs_200-last-trained'\n",
+    "filename = f'model-corenlp-emb_64-lstm_32-seed_42-epochs_75-last-trained'\n",
     "persuasion.load_state_dict(torch.load(dir_path+filename))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,73 +345,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "informa amlo que mañana se reunirá con maestros , padres de familia y comunidades indígenas en guelatao , oaxaca .\n",
+      "Informa AMLO que mañana se reunirá con maestros , padres de familia y comunidades indígenas en Guelatao , Oaxaca .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.685\t0.989\t0.000\t0.015\t0.000\t0.000\t0.000\n",
+      "0.638\t0.012\t0.000\t0.000\t0.239\t0.000\t0.000\n",
       "\n",
-      "explicó que seguirá el ejemplo de los mejores presidentes de méxico : benito juárez , francisco i.\n",
+      "Explicó que seguirá el ejemplo de los mejores presidentes de México : Benito Juárez , Francisco I.\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.000\t0.000\t0.000\t0.000\t0.000\t0.000\n",
+      "0.000\t0.044\t0.001\t0.001\t0.000\t0.000\t0.000\n",
       "\n",
-      "afirmó que josé antonio meade propone otorgar becas a estudiantes indígenas , créditos a la palabra para las mujeres y la apertura de casas de día para adultos mayores .\n",
+      "Afirmó que José Antonio Meade propone otorgar becas a estudiantes indígenas , créditos a la palabra para las mujeres y la apertura de Casas de Día para adultos mayores .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.000\t0.000\t0.000\t0.009\t0.000\t0.000\n",
+      "0.001\t0.518\t0.000\t0.000\t0.090\t0.001\t0.000\n",
       "\n",
-      "\" no podemos actuar con irresponsabilidad , si los contratistas , los que tienen los contratos quieren invertir y hacerse cargo , que no le cueste al erario público , a la hacienda pública , adelante , estamos nosotros dispuesto a <UNK> \" , expuso al comentar que tiene una alternativa que es construir dos pistas en el aeropuerto militar de santa lucía , sin cerrar el actual aeropuerto .\n",
+      "\" No podemos actuar con irresponsabilidad , si los contratistas , los que tienen los contratos quieren invertir y hacerse cargo , que no le cueste al erario público , a la hacienda pública , adelante , estamos nosotros dispuesto a concesionarlo \" , expuso al comentar que tiene una alternativa que es construir dos pistas en el aeropuerto militar de Santa Lucía , sin cerrar el actual aeropuerto .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.906\t0.972\t1.000\t0.211\t0.030\t0.000\n",
+      "0.081\t0.792\t0.364\t0.955\t0.000\t0.457\t0.000\n",
       "\n",
-      "\" es decir que tengan una concesión y que les vaya muy bien , slim ha dicho de que es un buen negocio , pues adelante , que participe en la licitación , vamos a convocar a técnicos de inobjetable honestidad , de constructores expertos y que expertos independientes hagan la propuesta para la licitación y que se les pueda presentar esto como una opción como una alternativa \" , dijo .\n",
+      "\" Es decir que tengan una concesión y que les vaya muy bien , Slim ha dicho de que es un buen negocio , pues adelante , que participe en la licitación , vamos a convocar a técnicos de inobjetable honestidad , de constructores expertos y que expertos independientes hagan la propuesta para la licitación y que se les pueda presentar esto como una opción como una alternativa \" , dijo .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.004\t0.000\t0.011\t1.000\t0.000\t0.000\n",
+      "0.970\t0.412\t0.002\t0.000\t0.981\t0.011\t0.002\n",
       "\n",
-      "recordó que fue director del instituto nacional indigenista en tabasco , hace 40 años y ahí <UNK> a trabajar por la gente humilde y pobre , pero estos corruptos neoliberales acabaron con el <UNK> , ya no hay los centros coordinadores indigenistas que habían antes .\n",
+      "Recordó que fue director del Instituto Nacional Indigenista en Tabasco , hace 40 años y ahí aprendió a trabajar por la gente humilde y pobre , pero estos corruptos neoliberales acabaron con el INI , ya no hay los centros coordinadores indigenistas que habían antes .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.001\t0.999\t0.000\t0.001\t0.000\t0.000\t0.000\n",
+      "0.003\t0.834\t0.088\t0.000\t0.420\t0.007\t0.000\n",
       "\n",
-      "eruviel ávila estuvo acompañado del dirigente estatal del pri , ernesto nemer álvarez , quien reconoció la fortaleza de las mujeres y hombres priistas de ecatepec , quienes darán el triunfo al candidato de la coalición todos por méxico .\n",
+      "Eruviel Ávila estuvo acompañado del dirigente estatal del PRI , Ernesto Nemer Álvarez , quien reconoció la fortaleza de las mujeres y hombres priistas de Ecatepec , quienes darán el triunfo al candidato de la coalición Todos por México .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.001\t0.000\t0.013\t0.005\t0.000\t0.000\n",
+      "0.028\t0.000\t0.465\t0.000\t0.010\t0.002\t0.002\n",
       "\n",
-      "yo quiero ser el presidente de méxico , para lograr ese cambio profundo y esa transformación que hoy , nuestro país necesita .\n",
+      "Yo quiero ser el Presidente de México , para lograr ese cambio profundo y esa transformación que hoy , nuestro país necesita .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "1.000\t0.000\t0.000\t0.000\t0.032\t0.000\t0.000\n",
+      "0.041\t0.000\t0.000\t0.000\t0.013\t0.000\t0.000\n",
       "\n",
-      "ricardo anaya exhortó a sus colaboradores a trabajar sin descanso durante los próximos tres meses .\n",
+      "Ricardo Anaya exhortó a sus colaboradores a trabajar sin descanso durante los próximos tres meses .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.436\t0.000\t0.308\t0.000\t0.055\t0.023\t0.000\n",
+      "0.006\t0.799\t0.001\t0.056\t0.002\t0.005\t0.026\n",
       "\n",
-      "adelantó que llamará a participar a muchos jóvenes en el nuevo gobierno democrático y puso como ejemplo los jóvenes que participarán : como secretario de desarrollo urbano será <UNK> <UNK> ; secretaria de trabajo , maría luisa <UNK> , quien le tocará <UNK> el programa \" jóvenes construyendo el futuro \" .\n",
+      "Adelantó que llamará a participar a muchos jóvenes en el nuevo gobierno democrático y puso como ejemplo los jóvenes que participarán : como secretario de Desarrollo Urbano será Román Meyer ; secretaria de Trabajo , María Luisa Alcalde , quien le tocará coordinar el programa \" Jóvenes construyendo el futuro \" .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.999\t0.000\t0.972\t0.000\t1.000\t0.000\t0.000\n",
+      "0.932\t0.004\t0.000\t0.000\t0.715\t0.000\t0.000\n",
       "\n",
-      "finalmente , reiteró que la coalición que encabeza quiere un gobierno con <UNK> mujeres no sólo en el gabinete , sino en todos los espacios públicos y de decisión .\n",
+      "Finalmente , reiteró que la Coalición que encabeza quiere un gobierno con muchísimas mujeres no sólo en el gabinete , sino en todos los espacios públicos y de decisión .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.142\t1.000\t0.000\t0.588\t0.006\t0.000\t0.000\n",
+      "0.928\t0.003\t0.000\t0.000\t0.313\t0.000\t0.000\n",
       "\n",
-      "señaló que se tiene que votar por la transformación de méxico , no se trata de votar por un candidato o por un partido , lo más importante es votar por el programa de transformación del país .\n",
+      "Señaló que se tiene que votar por la transformación de México , no se trata de votar por un candidato o por un partido , lo más importante es votar por el programa de transformación del país .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.021\t0.000\t0.000\t0.024\t0.000\t0.000\n",
+      "0.996\t0.940\t0.000\t0.001\t0.002\t0.000\t0.000\n",
       "\n",
-      "<UNK> del referido financiamiento ilegal , y de manera <UNK> , dirigentes y militantes de morena distribuyen dinero en efectivo a <UNK> , incluyendo a una mayoría que no está en el padrón de damnificados , a fin de <UNK> el voto a favor de lópez obrador , acusó la diputada mariana benítez , también representante del pri ante el ine .\n",
+      "Aprovechándose del referido financiamiento ilegal , y de manera opaca , dirigentes y militantes de Morena distribuyen dinero en efectivo a votantes , incluyendo a una mayoría que no está en el padrón de damnificados , a fin de coaccionar el voto a favor de López Obrador , acusó la Diputada Mariana Benítez , también representante del PRI ante el INE .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.004\t0.996\t0.000\t0.998\t0.000\t0.000\t0.000\n",
+      "0.999\t0.973\t0.010\t0.003\t0.800\t0.000\t0.000\n",
       "\n",
-      "por la tarde , andrés manuel lópez obrador visitará chetumal , quintana roo , donde dijo que podrá cumplir con sus compromisos , porque terminará con la corrupción y los privilegios , habrá presupuesto , pero no endeudará al país , ni habrá aumentos de impuestos , ni gasolinazos .\n",
+      "Por la tarde , Andrés Manuel López Obrador visitará Chetumal , Quintana Roo , donde dijo que podrá cumplir con sus compromisos , porque terminará con la corrupción y los privilegios , habrá presupuesto , pero no endeudará al país , ni habrá aumentos de impuestos , ni gasolinazos .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.070\t0.998\t0.001\t0.003\t0.000\t0.000\t0.000\n",
+      "0.000\t0.587\t0.000\t0.020\t0.000\t0.000\t0.000\n",
       "\n",
-      "arturo zamora compromete apoyo de priistas para llevar a su candidato presidencial al triunfo .\n",
+      "Arturo Zamora compromete apoyo de priistas para llevar a su candidato presidencial al triunfo .\n",
       "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.000\t0.000\t0.006\t0.301\t0.000\t0.000\n",
+      "0.000\t0.059\t0.972\t0.047\t0.165\t0.000\t0.005\n",
       "\n"
      ]
     }
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    for x in X_test:\n",
-    "        print_ix_sentence(x)\n",
+    "    for i, x in enumerate(X_test):\n",
+    "        print(' '.join(sentences[i]))\n",
+    "#         print_ix_sentence(x)\n",
     "        pred = persuasion(x)\n",
     "        print_ix_cat(pred)\n",
     "        print()"
